Fixed typo index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/nova4005">View on GitHub</a>
 
-          <h1 id="project_title">Ben is the best</h1>
+          <h1 id="project_title">Nova4005.github.io</h1>
           <h2 id="project_tagline">Web Page</h2>
 
         </header>
